        # The method 'creme_core.tests.views.base.ButtonTestCaseMixin.iter_instance_button_nodes()' has been renamed 'iter_button_nodes()'
          (because of the new method 'get_global_buttons_node()').
        # The template "creme_core/templates/creme_core/view_property_type.html" is now "creme_core/templates/creme_core/detail/property-type.html".
        # Apps :
            * Creme_config :
                - In 'registry._ConfigRegistry' :
                    - The way the bricks of portal & app portals are managed have changed.
                      BEWARE: when you register a brick with 'register_portal_bricks()'/'register_app_bricks()' (in your 'apps.py'),
                      the brick class must not be registered in the global brick registry anymore.
                    - The way the bricks of "My settings" are managed have changed :
                        - BEWARE: when you register a brick with 'register_user_bricks()' (in your 'apps.py'),
                          the brick class must not be registered in the global brick registry anymore.
                        - The property 'user_bricks' has been replaced by 'get_user_bricks()'.
                - In 'urls' :
                    - The view named 'creme_config__create_detailviews_bricks' has been renamed 'creme_config__create_detailview_bricks'.
                    - The view named 'creme_config__delete_home_brick' has been renamed 'creme_config__delete_home_bricks'.
                - In 'forms' :
                    - The class 'bricks._CustomBrickConfigItemBaseForm' has been removed.
                    - In 'creme_property_type', these classes have been removed :
                        - _CremePropertyTypeBaseForm
                        - CremePropertyTypeCreationForm
                        - CremePropertyTypeEditionForm
                    - The global dictionary 'forms.setting._FIELDS' has been removed;