@@ -283,6 +283,9 @@
         # The method 'creme_core.tests.views.base.ButtonTestCaseMixin.iter_instance_button_nodes()' has been renamed 'iter_button_nodes()'
           (because of the new method 'get_global_buttons_node()').
         # The template "creme_core/templates/creme_core/view_property_type.html" is now "creme_core/templates/creme_core/detail/property-type.html".
+        # Remove obsolete javascript tools : all browsers are supporting flexbox, table layout and ResizeObserver
+            - creme.widget.Container
+            - creme.layout.LayoutResizeSensor
         # Apps :
             * Creme_config :
                 - In 'registry._ConfigRegistry' :
